--- a/views/_layout/error.html
+++ b/views/_layout/error.html
@@ -7,10 +7,7 @@
         <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
-        <h1>{{post.title|escape}}</h1>
-        <p>日期：{{post.date|escape}}</p>
-        <hr>
-        <div class="post-content">{{post.content}}</div>
-        <div id="disqus_thread"></div>
+        <p class="code404">404</p>
+        <p class="code-desc">404</p>
     </body>
 </html>
