--- a/tpl/_layout/index.html
+++ b/tpl/_layout/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{config.title|escape}}</title>
+        <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
