--- a/views/assets/style.css
+++ b/views/assets/style.css
@@ -44,3 +44,16 @@ pre {
     color: #f00;
 }
 
+.code404 {
+    font-size: 28px;
+    padding-top: 200px;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+}
+.code-desc {
+    margin-top: 50px;
+    font-size: 16px;
+    color: #333;
+    text-align: center;
+}
